tests/golden/compile-pass/expr_precedence.rua
fn precedence() -> bool {
    1 + 2 * 3 == 7 && true || false
}
