tests/golden/compile-fail/type_return_mismatch.rua
fn enabled() -> bool {
    1
}
